multiple changes to release support for mRNA , miRNA and methylation data

--- a/methylation_data_cleaning.ipynb
+++ b/methylation_data_cleaning.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2208b9b09b372b9e563e24e5329c8e4caa43b59153578dc8797ad351c7131a98"
+  "signature": "sha256:4c649d849b56b45647f5f605361c07efd5010f5099a2ba0459e0ffc2925a6aef"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,12 +15,21 @@
       "import synapseclient\n",
       "import pandas as pd\n",
       "import sys\n",
-      "import os"
+      "import os\n",
+      "%pylab inline"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 139
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      }
+     ],
+     "prompt_number": 195
     },
     {
      "cell_type": "code",
@@ -32,7 +41,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 141
+     "prompt_number": 196
     },
     {
      "cell_type": "code",
@@ -42,7 +51,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "Welcome, Abhishek Pratap!\n"
+       ]
+      }
+     ],
+     "prompt_number": 197
     },
     {
      "cell_type": "code",
@@ -56,7 +74,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 203
     },
     {
      "cell_type": "code",
@@ -65,35 +84,41 @@
       "#only keep those probes which have a corresponding Entrez\n",
       "meth_to_gene = meth_to_gene[meth_to_gene.EntrezID.notnull()]\n",
       "meth_to_gene = meth_to_gene['EntrezID']\n",
-      "meth_to_gene = meth_to_gene.reset_index()\n",
-      "\n",
       "\n",
       "#only keep those probes in the meth_data which have a EntrezID\n",
-      "meth_data = meth_data.loc[meth_to_gene.index]"
+      "meth_data = meth_data.loc[meth_to_gene.index]\n",
+      "\n",
+      "#only keep those probes that have variance > .01\n",
+      "meth_data = meth_data[meth_data.var(axis=1) > .01]\n",
+      "\n",
+      "#only keep those probes in meth_to_genes which are present in filtered meth_data\n",
+      "meth_to_gene = meth_to_gene.loc[meth_data.index]"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 204
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#split the multiple entrez ids for each probe\n",
       "def  temp_func(x):\n",
       "    ids=x['EntrezID'].values[0].split(';') \n",
       "    df = pd.DataFrame({'entrezId':ids})\n",
       "    return df\n",
       "\n",
+      "meth_to_gene = meth_to_gene.reset_index()\n",
       "grp = meth_to_gene.groupby(['index'])\n",
       "\n",
-      "#x = meth_to_gene.ix[1:5,]\n",
-      "#grp = x.groupby(['index'])\n",
-      "\n",
-      "x = grp.apply(temp_func)\n"
+      "meth_to_gene = grp.apply(temp_func).reset_index()\n",
+      "meth_to_gene = meth_to_gene[['index', 'entrezId']]"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 208
     },
     {
      "cell_type": "code",
@@ -101,23 +126,209 @@
      "input": [
       "#upload filtered meth_data to synapse\n",
       "meth_data.to_csv('methData_filtered.csv', sep=\"\\t\", header=True, index=True)\n",
-      "syn.store(synapseclient.File('methData_filtered.csv'), used='syn2233188', executed=')"
+      "_ = syn.store(synapseclient.File('methData_filtered.csv', parentId='syn2731118'), used='syn2233188', \n",
+      "          executed='https://raw.githubusercontent.com/apratap/PCBC_HeatMap_app/dev/methylation_data_cleaning.ipynb')\n",
+      "\n",
+      "! rm methData_filtered.csv"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 145
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        ","
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        ","
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        ","
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        ","
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        ","
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        ","
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "!"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "!"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "!"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "!\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Upload completed in 1 minute, 9 seconds.\n"
+       ]
+      }
+     ],
+     "prompt_number": 210
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "??synapseutils.pushToSynapse"
+      "meth_to_gene.columns = ['methProbeID', 'entrezID']\n",
+      "#upload filtered meth_data to synapse\n",
+      "meth_to_gene.to_csv('meth_to_gene.csv', sep=\"\\t\", header=True, index=False)\n",
+      "_ = syn.store(synapseclient.File('meth_to_gene.csv', parentId='syn2731118'), used='syn2324928', \n",
+      "          executed='https://raw.githubusercontent.com/apratap/PCBC_HeatMap_app/dev/methylation_data_cleaning.ipynb')\n",
+      "\n",
+      "! rm meth_to_gene.csv"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 143
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        ","
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "!"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "!"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "!\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Upload completed in 5 seconds.\n"
+       ]
+      }
+     ],
+     "prompt_number": 211
     },
     {
      "cell_type": "code",
